[gd_scene load_steps=5 format=3 uid="uid://dp7jehsigmngb"]

[ext_resource type="Script" path="res://scenes/enemies/orange/orange_enemy.gd" id="1_6g6yj"]
[ext_resource type="Texture2D" uid="uid://dbqxxd2p3cas7" path="res://assets/enemies/orange1.png" id="2_8kcq2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yqrqw"]
radius = 15.9784

[sub_resource type="CircleShape2D" id="CircleShape2D_kcc12"]
radius = 15.0641

[node name="OrangeEnemy" type="CharacterBody2D"]
scale = Vector2(2.35, 2.35)
collision_layer = 8
collision_mask = 33
script = ExtResource("1_6g6yj")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.874559, 0.329653, 1)
scale = Vector2(0.33, 0.33)
texture = ExtResource("2_8kcq2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(2.415, 2.415)
shape = SubResource("CircleShape2D_yqrqw")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="RunTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(10, 10)
shape = SubResource("CircleShape2D_kcc12")
debug_color = Color(0.652227, 0.420774, 0.7872, 0.42)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RunTimer" to="." method="_on_run_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
